--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
